--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -1,51 +1,78 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>{{$seotitle := .Params.seotitle}}{{ if isset .Params "seotitle" }}{{$seotitle}}{{else}}{{.Title}}{{ end }}{{ if .IsHome }} | Endüstriyel Tasarım Dergisi {{ .Site.Params.Tagline }}{{ else }} - {{ .Site.Title }}{{ end }}</title>
-    <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}"/>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+		<!-- prettier-ignore -->
+		<title>{{$seotitle := .Params.seotitle}}{{ if isset .Params "seotitle" }}{{$seotitle}}{{else}}{{.Title}}{{ end }}{{ if .IsHome }} | Endüstriyel Tasarım Dergisi {{ .Site.Params.Tagline }}{{ else }} - {{ .Site.Title }}{{ end }}
+		</title>
+		<meta
+			name="description"
+			content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}"
+		/>
 
-    <link rel="stylesheet" href="{{.Site.BaseURL}}/bootstrap/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{.Site.BaseURL}}/css/styles.css">
-    {{ with .Params.robotsdisallow }}<meta name="robots" content="noindex, nofollow">{{ else }}<meta name="robots" content="index, follow">{{ end }}
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/icon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/icon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/icon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/icon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/icon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/icon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/icon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/icon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/icon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
-    <link rel="manifest" href="/icon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="canonical" href="{{ .Permalink }}" />
+		<link rel="stylesheet" href="{{.Site.BaseURL}}bootstrap/bootstrap.min.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto+Condensed:wght@300;400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.css" />
+		{{ with .Params.robotsdisallow }}
+		<meta name="robots" content="noindex, nofollow" />
+		{{ else }}
+		<meta name="robots" content="index, follow" />
+		{{ end }}
+		<!-- Favicon -->
+		<link rel="apple-touch-icon" sizes="57x57" href="/icon/apple-icon-57x57.png" />
+		<link rel="apple-touch-icon" sizes="60x60" href="/icon/apple-icon-60x60.png" />
+		<link rel="apple-touch-icon" sizes="72x72" href="/icon/apple-icon-72x72.png" />
+		<link rel="apple-touch-icon" sizes="76x76" href="/icon/apple-icon-76x76.png" />
+		<link rel="apple-touch-icon" sizes="114x114" href="/icon/apple-icon-114x114.png" />
+		<link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-icon-120x120.png" />
+		<link rel="apple-touch-icon" sizes="144x144" href="/icon/apple-icon-144x144.png" />
+		<link rel="apple-touch-icon" sizes="152x152" href="/icon/apple-icon-152x152.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-icon-180x180.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="/icon/android-icon-192x192.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="96x96" href="/icon/favicon-96x96.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png" />
+		<link rel="manifest" href="/icon/manifest.json" />
+		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+		<meta name="theme-color" content="#ffffff" />
+		<link rel="canonical" href="{{ .Permalink }}" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}" />
-    <meta name="twitter:title" content="{{ .Title }} {{ if .IsHome }}| Endüstriyel Tasarım Dergisi {{ .Site.Params.Tagline }}{{ else }}| {{ .Site.Title }}{{ end }}" />
-   
-    <!-- OG data -->
-    <meta property="og:locale" content="tr_TR" />
-    <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
-    <meta content="{{ .Title }} {{ if .IsHome }}| Endüstriyel Tasarım Dergisi {{ .Site.Params.Tagline }}{{ else }}| {{ .Site.Title }}{{ end }}" property="og:title">
-    <meta content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}" property="og:description">
-    <meta property="og:url" content="{{ .Permalink }}" />
-    <meta property="og:site_name" content="{{ .Site.Title }}" />
-    {{ range .Params.categories }}<meta property="article:section" content="{{ . }}" />{{ end }}
-    {{ if isset .Params "date" }}<meta property="article:published_time" content="{{ time .Date }}" />{{ end }}
+		<!-- Twitter Card -->
+		<meta name="twitter:card" content="summary" />
+		<meta
+			name="twitter:description"
+			content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}"
+		/>
+		<meta
+			name="twitter:title"
+			content="{{ .Title }} {{ if .IsHome }}| Endüstriyel Tasarım Dergisi {{ .Site.Params.Tagline }}{{ else }}| {{ .Site.Title }}{{ end }}"
+		/>
 
-    <!--
+		<!-- OG data -->
+		<meta property="og:locale" content="tr_TR" />
+		<meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
+		<meta
+			content="{{ .Title }} {{ if .IsHome }}| Endüstriyel Tasarım Dergisi {{ .Site.Params.Tagline }}{{ else }}| {{ .Site.Title }}{{ end }}"
+			property="og:title"
+		/>
+		<meta
+			content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}"
+			property="og:description"
+		/>
+		<meta property="og:url" content="{{ .Permalink }}" />
+		<meta property="og:site_name" content="{{ .Site.Title }}" />
+		{{ range .Params.categories }}
+		<meta property="article:section" content="{{ . }}" />
+		{{ end }} {{ if isset .Params "date" }}
+		<meta property="article:published_time" content="{{ time .Date }}" />
+		{{ end }}
+
+		<!--
     {{ if .IsHome }}
     <script type="application/ld+json">
     { 
@@ -67,6 +94,7 @@
              }
         </script>
     {{ end }}-->
-  <!--  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
-</head>
-    <body>
+		<!--  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
+	</head>
+	<body></body>
+</html>
