svg margin, reklam sponsorluk, yorum sistemi

--- a/themes/Markut/layouts/blog/list.html
+++ b/themes/Markut/layouts/blog/list.html
@@ -4,7 +4,7 @@
     <div class="container">
         <header class="page-header markutcontent"><h1>{{ .Title }}</h1></header>
         <div class="container toc">
-            <h2>Çok Yakında.</h2>
+            <h2>Markut Blog projesi askıya alınmıştır. Dergimizi takip etmeye devam edebilirsiniz.</h2>
             {{ range .Pages }}
             <article> <a href="{{ .Permalink }}">
                 <img class="img-fluid thumb" src="{{.Params.thumb}}" alt="">
