--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -133,13 +133,15 @@
               <label for="darkSwitch">Karanlık Mod</label>
             </div></li>
         </ul>
+       
         <ul class="list-inline footerlinks">
           Sosyal Medya:
         <li class="list-inline-item"><a href="https://www.instagram.com/markutworks/" target="_blank">Instagram</a></li>|
         <li class="list-inline-item"><a href="https://tr.pinterest.com/markutworks/" target="_blank">Pinterest</a></li>|
         <li class="list-inline-item"><a href="https://markutworks.tumblr.com/" target="_blank">Tumblr</a></li>
       </ul>
-        <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a>  <a href="/dergi/">/dergi</a>  <a href="/blog/">/blog</a> | Copyright © 2020 | Markut tarafından tasarlandı.</div>
+      
+        <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a>  <a href="/dergi/">/dergi</a> | Copyright © 2020-2021 | Markut tarafından tasarlandı.</div>
     </div></footer>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="{{.Site.BaseURL}}/bootstrap/bootstrap.min.js"></script>
