--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -71,7 +71,8 @@
 		{{ end }} {{ if isset .Params "date" }}
 		<meta property="article:published_time" content="{{ time .Date }}" />
 		{{ end }}
-
+		<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
+		<script src='//unpkg.com/valine/dist/Valine.min.js'></script>
 		<!--
     {{ if .IsHome }}
     <script type="application/ld+json">
