svgnin artık kod dosyada manifest

--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -11,7 +11,7 @@
       </div>
       <div class="modal-body">
           <div class="mailde">
-                  <div class="col-md-8 m-auto"><img class="img-fluid" src="/img/markut-mailde-v2.svg" alt="Markut Mailde İllustrasyon"></div>
+                  <div class="col-md-8 m-auto"><img class="img-fluid" src="/img/markut-mailde-v3.svg" alt="Markut Mailde İllustrasyon"></div>
                   <div class="mailde-title">Dergimize Abone Olun</div>
                   <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
                   <p class="emailoctopus-success-message">
@@ -143,9 +143,9 @@
       
         <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a>  <a href="/dergi/">/dergi</a> | Copyright © 2020-2021 | Markut tarafından tasarlandı.</div>
     </div></footer>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="{{.Site.BaseURL}}/bootstrap/bootstrap.min.js"></script>
-    <script src="https://emailoctopus.com/bundles/emailoctopuslist/js/1.6/form-embed.js">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js" defer='defer'></script>
+    <script src="{{.Site.BaseURL}}/bootstrap/bootstrap.min.js" defer='defer'></script>
+    <script src="https://emailoctopus.com/bundles/emailoctopuslist/js/1.6/form-embed.js" defer='defer'>
     </script>
 
     {{ if not (in (.Site.BaseURL | string) "localhost") }}
