--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -678,86 +678,11 @@ article a:hover {
   text-decoration: none;
 }
 
-/* Svg Denemesi */
- #markut{
-   animation: markutlogo 6s ease infinite;
- }
- @keyframes markutlogo{
-  0%{ transform: rotateZ(0deg) translateY(0px) translateX(2px); -webkit-transform: rotateZ(0deg) translateY(0px) translateX(2px); -moz-transform: rotateZ(0deg) translateY(0px) translateX(2px); -ms-transform: rotateZ(0deg) translateY(0px) translateX(2px); -o-transform: rotateZ(0deg) translateY(0px) translateX(2px); }
-  50%{ transform: rotateZ(5deg) translateY(15px) translateX(12px); -webkit-transform: rotateZ(5deg) translateY(15px) translateX(12px); -moz-transform: rotateZ(5deg) translateY(15px) translateX(12px); -ms-transform: rotateZ(5deg) translateY(15px) translateX(12px); -o-transform: rotateZ(5deg) translateY(15px) translateX(12px); }
-  100%{ transform: rotateZ(0deg) translateY(0px) translateX(2px); -webkit-transform: rotateZ(0deg) translateY(0px) translateX(2px); -moz-transform: rotateZ(0deg) translateY(0px) translateX(2px); -ms-transform: rotateZ(0deg) translateY(0px) translateX(2px); -o-transform: rotateZ(0deg) translateY(0px) translateX(2px); }
-}
-
- #kumpas{
-  animation: kumpas 8s ease infinite;
-}
-@keyframes kumpas{
-  0%{ transform: rotateZ(0deg); -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); }
-  50%{ transform: rotateZ(-1deg); -webkit-transform: rotateZ(-1deg); -moz-transform: rotateZ(-1deg); -ms-transform: rotateZ(-1deg); -o-transform: rotateZ(-1deg); }
-  100%{ transform: rotateZ(0deg); -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); }
-}
-#t-cetvel{
-  animation: t-cetvel 10s ease infinite;
-}
-@keyframes t-cetvel{
-  0%{ transform: rotateZ(0deg); -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); }
-  50%{ transform: rotateZ(1deg); -webkit-transform: rotateZ(1deg); -moz-transform: rotateZ(1deg); -ms-transform: rotateZ(1deg); -o-transform: rotateZ(1deg); }
-  100%{ transform: rotateZ(0deg); -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); }
-}
-#gonye{
-  animation: gonye 8s ease-in-out infinite;
-}
-@keyframes gonye{
-  0%{ transform: rotateZ(0deg); -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); }
-  50%{ transform: rotateZ(-1deg); -webkit-transform: rotateZ(-1deg); -moz-transform: rotateZ(-1deg); -ms-transform: rotateZ(-1deg); -o-transform: rotateZ(-1deg); }
-  100%{ transform: rotateZ(0deg); -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); }
-}
-#pergel{
-  animation: pergel 7s ease-in infinite;
-  -webkit-animation: pergel 7s ease-in infinite;
-}
-@keyframes pergel{
-  0%{ transform: rotateZ(0deg); -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); }
-  50%{ transform: rotateZ(-1deg); -webkit-transform: rotateZ(-1deg); -moz-transform: rotateZ(-1deg); -ms-transform: rotateZ(-1deg); -o-transform: rotateZ(-1deg); }
-  100%{ transform: rotateZ(0deg); -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); }
-}
-#aci-olcer{
-  animation: aci-olcer 7s ease-in infinite;
-  -webkit-animation: aci-olcer 7s ease-in infinite;
-}
-@keyframes aci-olcer{
-  0%{ transform: rotateZ(0deg); -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); }
-  50%{ transform: rotateZ(-1deg); -webkit-transform: rotateZ(-1deg); -moz-transform: rotateZ(-1deg); -ms-transform: rotateZ(-1deg); -o-transform: rotateZ(-1deg); }
-  100%{ transform: rotateZ(0deg); -webkit-transform: rotateZ(0deg); -moz-transform: rotateZ(0deg); -ms-transform: rotateZ(0deg); -o-transform: rotateZ(0deg); }
-}
-/*
-#background{
-  animation: backk 2s ease-in infinite;
-  transform-origin: center;
-}
-@keyframes backk{
-  0%{ transform:skew(179deg,179deg) rotate(1deg); }
-  50%{ transform:skew(180deg,179deg) rotate(1deg); -webkit-transform:skew(180deg,179deg) rotate(1deg); -moz-transform:skew(180deg,179deg) rotate(1deg); -ms-transform:skew(180deg,179deg) rotate(1deg); -o-transform:skew(180deg,179deg) rotate(1deg); }
-  100%{ transform:skew(179deg,179deg) rotate(1deg);}
-}
-*/
-
-#darkmodeicon{
-  z-index: 1;
-  animation: darkmodemrkt 2s ease-in ;
-  -webkit-animation: darkmodemrkt 2s ease-in ;
-}
-@keyframes darkmodemrkt{
-  0%{ transform:  translateY(90px)  ; -webkit-transform:  translateY(90px)  ; -moz-transform:  translateY(90px)  ; -ms-transform:  translateY(90px)  ; -o-transform:  translateY(90px)  ; }
-  80%{ transform:  translateY(90px)  ; -webkit-transform:  translateY(90px)  ; -moz-transform:  translateY(90px)  ; -ms-transform:  translateY(90px)  ; -o-transform:  translateY(90px)  ; }
-  100%{ transform: translateY(0px) ; -webkit-transform: translateY(0px) ; -moz-transform: translateY(0px) ; -ms-transform: translateY(0px) ; -o-transform: translateY(0px) ; }
-}
+/* Svg */
 
 svg{
   z-index: 100;
 }
-svg .stm0 {fill: rgb(0, 0, 0)13, 14, 14);}
-svg .stm0:hover {fill: rgb(95, 95, 95);}
 
 
 /* Blog başlangıç */
@@ -915,6 +840,7 @@ svg .stm0:hover {fill: rgb(95, 95, 95);}
 [data-theme="dark"] .mdarkmode {color: #ffffff;}
 [data-theme="dark"] svg .stm0 {fill: #ffffff;}
 [data-theme="dark"] svg .stm1 {fill: #000000;}
+[data-theme="dark"] .idarkmode img{filter: invert(1);}
 [data-theme="dark"] .onde .desc {color: #afafaf;}
 [data-theme="dark"] .toc .desc {color: #afafaf;}
 [data-theme="dark"] .footerdesc {color: #afafaf;}
