--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -8,7 +8,7 @@
   <div class="row markutsayi post {{ .Scratch.Get `postClass` }}">
                 <div class="col-md-6">
                 <div class="markutcvr text-right">
-                  {{ if isset .Params "thumb"}}<a href="{{ .Permalink }}"><img class="img-fluid" src="{{.Params.thumb}}" alt="Markut Sayı: {{ range .Params.sayi }}{{ . }}{{ end }} Kapak Tasarımı"></a>{{end}}
+                  {{ if isset .Params "thumb"}}<a href="{{ .Permalink }}"><img loading="lazy" class="img-fluid" src="{{.Params.thumb}}" alt="Markut Sayı: {{ range .Params.sayi }}{{ . }}{{ end }} Kapak Tasarımı"></a>{{end}}
                         <a href="{{ .Permalink }}">{{.Content}}</a>
                 </div>
                 </div>
@@ -29,7 +29,7 @@
         <div class="row mt-5">
          {{ range first 30 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}
          <div class="col-md-6 mt-5"><article>    
-       <a href="{{ .Permalink }}"><img class="img-fluid thumb" src="{{.Params.thumb}}" alt="{{ .Title | markdownify }}">   
+       <a href="{{ .Permalink }}"><img loading="lazy" class="img-fluid thumb" src="{{.Params.thumb}}" alt="{{ .Title | markdownify }}">   
         <h2 class="title">{{ .Title | markdownify }}</h2>
         <p class="yazar">{{- range $index, $element := .Params.yazar }}{{- with $.Site.GetPage "taxonomyTerm" (printf "yazar/%s" (urlize .)) }}{{ if gt $index 0 }}, {{ end }}<a href="{{ .Permalink }}">{{ .Params.title }}</a>{{ end }}{{ end }} | <time>{{ index $.Site.Data.months_data.months .Date.Month }} {{ .Date.Year }}</time></p>
         <p class="desc">{{ .Params.aciklama | plainify | htmlUnescape }}</p>
