--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -11,7 +11,7 @@
       </div>
       <div class="modal-body">
           <div class="mailde">
-                  <div class="col-md-8 m-auto"><img class="img-fluid" src="/img/markut-mailde-v3.svg" alt="Markut Mailde İllustrasyon"></div>
+                  <div class="col-md-8 m-auto"><img loading="lazy" class="img-fluid" src="/img/markut-mailde-v3.svg" alt="Markut Mailde İllustrasyon"></div>
                   <div class="mailde-title">Dergimize Abone Olun</div>
                   <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
                   <p class="emailoctopus-success-message">
@@ -116,7 +116,7 @@
     <small>ücretsizdir.</small>
 </div>
 <hr>
-        <div class="footericon"><img src="/img/logo-color.svg" alt="Markut Logo"></div>
+        <div class="footericon"><img loading="lazy" src="/img/logo-color.svg" alt="Markut Logo"></div>
         <div class="footerlogo">MARKUT</div>
         <div class="footersur">Marmara Kreatif Ürün Tasarım Ekibi</div>
         <p class="footerdesc"><strong>Markut</strong>, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online <strong>endüstriyel tasarım dergimizi</strong> bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında <strong>genel tasarım</strong> disiplinleriyle de ilişkili olarak içerikler üretmektedir. İçeriklerimizi başka platformlarda paylaşırken kaynak olarak <a href="https://www.markut.net">Markut.net</a> ibaresinin geçmesi gerekmektedir.</p>
