--- a/themes/Markut/layouts/blog/list.html
+++ b/themes/Markut/layouts/blog/list.html
@@ -7,7 +7,7 @@
             <h2>Markut Blog projesi askıya alınmıştır. Dergimizi takip etmeye devam edebilirsiniz.</h2>
             {{ range .Pages }}
             <article> <a href="{{ .Permalink }}">
-                <img class="img-fluid thumb" src="{{.Params.thumb}}" alt="">
+                <img loading="lazy" class="img-fluid thumb" src="{{.Params.thumb}}" alt="">
                 <h2 class="title">{{ .Title | markdownify }}</h2>
                 <p class="yazar">{{- range $index, $element := .Params.yazar }}{{- with $.Site.GetPage "taxonomyTerm" (printf "yazar/%s" (urlize .)) }}{{ if gt $index 0 }}, {{ end }}<a href="{{ .Permalink }}">{{ .Params.title }}</a>{{ end }}{{ end }} | <time>{{ index $.Site.Data.months_data.months .Date.Month }} {{ .Date.Year }}</time></p>
                 <p class="desc">{{ .Summary | plainify | htmlUnescape }}...</p></a>
