commentminjs, bakalit. manifest

--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -42,8 +42,7 @@
 		<meta name="theme-color" content="#ffffff" />
 		<link rel="canonical" href="{{ .Permalink }}" />
 
-		<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js" ></script>
-		<script src='//unpkg.com/valine/dist/Valine.min.js' ></script>
+		<script src="{{.Site.BaseURL}}js/comment.min.js" ></script>
 
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary" />
