comment path değişimi

--- a/themes/Markut/layouts/partials/comment.html
+++ b/themes/Markut/layouts/partials/comment.html
@@ -8,7 +8,8 @@
             appKey: 'Jo3wYc6YX2hD3jlkaC6v7unz',
             lang: 'en',
             avatar: 'monsterid',
-            meta: ['nick','mail']
+            meta: ['nick','mail'],
+            path: 'sayi-{{ range .Params.sayi }}{{ . }}{{ end }}'
         });
     </script>
 </div>
