--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -13,7 +13,7 @@
 
 		<link rel="stylesheet" href="{{.Site.BaseURL}}bootstrap/bootstrap.min.css" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto+Condensed:wght@300;400;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&family=Roboto+Condensed:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.css" />
