av-min-js, mini kapak

--- a/themes/Markut/layouts/partials/comment.html
+++ b/themes/Markut/layouts/partials/comment.html
@@ -6,6 +6,7 @@
             el: '#vcomment' ,
             appId: '9ow8JNvStPYbAo5yUuPsJzj1-MdYXbMMI',
             appKey: 'Jo3wYc6YX2hD3jlkaC6v7unz',
+            placeholder: 'Harika bir kaç sözcük ekleyin :)',
             lang: 'en',
             avatar: 'monsterid',
             meta: ['nick','mail'],
