--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -42,7 +42,7 @@
 		<meta name="theme-color" content="#ffffff" />
 		<link rel="canonical" href="{{ .Permalink }}" />
 
-		<script src="{{.Site.BaseURL}}js/comment.min.js" ></script>
+		<script src="https://unpkg.com/valine@1.4.14/dist/Valine.min.js"></script>
 
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary" />
