defer ekledim, manifesti sildim

--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -36,13 +36,12 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="96x96" href="/icon/favicon-96x96.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png" />
-		<link rel="manifest" href="{{.Site.BaseURL}}/icon/manifest.json" />
 		<meta name="msapplication-TileColor" content="#ffffff" />
-		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+		<meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png" />
 		<meta name="theme-color" content="#ffffff" />
 		<link rel="canonical" href="{{ .Permalink }}" />
 
-		<script src="https://unpkg.com/valine@1.4.14/dist/Valine.min.js"></script>
+		<script src="https://unpkg.com/valine@1.4.14/dist/Valine.min.js" defer='defer'></script>
 
 		<!-- Twitter Card -->
 		<meta name="twitter:card" content="summary" />
