paragraf font değişimi, style min css

--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -6,17 +6,9 @@
 		<!-- prettier-ignore -->
 		<title>{{$seotitle := .Params.seotitle}}{{ if isset .Params "seotitle" }}{{$seotitle}}{{else}}{{.Title}}{{ end }}{{ if .IsHome }} | Endüstriyel Tasarım Dergisi {{ .Site.Params.Tagline }}{{ else }} - {{ .Site.Title }}{{ end }}
 		</title>
-		<meta
-			name="description"
-			content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}"
-		/>
-
-		<link rel="stylesheet" href="{{.Site.BaseURL}}bootstrap/bootstrap.min.css" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&family=Roboto+Condensed:wght@400;700&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.css" />
+		<meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}"/>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.min.css" />
 		{{ with .Params.robotsdisallow }}
 		<meta name="robots" content="noindex, nofollow" />
 		{{ else }}
