--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -1,3 +1,4 @@
+
 /*
 @media screen and (min-width: 768px) {
   html {
@@ -8,11 +9,12 @@
   }
 }
 */
+
 div {
-  font-family: 'Open Sans', sans-serif;
+  font-family: Segoe UI,system-ui,-apple-system,sans-serif;
 }
 p {
-  font-family: 'Open Sans', sans-serif;
+  font-family: Segoe UI,system-ui,-apple-system,sans-serif;
   font-weight: 400;
   font-style: normal;
   letter-spacing: 0.2px;
