--- a/themes/Markut/layouts/partials/comment.html
+++ b/themes/Markut/layouts/partials/comment.html
@@ -1,5 +1,6 @@
 <div class="container">
   <p class="text-center">{{ range .Params.sayi }}{{ . }}{{ end }}. sayıya gelen yorumlar</p>
+  <script src="https://unpkg.com/valine@1.4.14/dist/Valine.min.js"></script>
 <div id="vcomment"></div>
     <script>
         new Valine({
