--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -1,3 +1,43 @@
+/* Fontlar*/
+
+/* latin-ext */
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/robotocondensed/v19/ieVl2ZhZI2eCN5jzbjEETS9weq8-19y7DRs5.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/robotocondensed/v19/ieVl2ZhZI2eCN5jzbjEETS9weq8-19K7DQ.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* latin-ext */
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/robotocondensed/v19/ieVi2ZhZI2eCN5jzbjEETS9weq8-32meGCoYb8td.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/robotocondensed/v19/ieVi2ZhZI2eCN5jzbjEETS9weq8-32meGCQYbw.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 
 /*
 @media screen and (min-width: 768px) {
@@ -27,36 +67,36 @@ p {
 h1 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
-  letter-spacing: 7px;
+  letter-spacing: 1.2px;
   margin-top: 50px;
 }
 h2 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
-  letter-spacing: 5px;
+  letter-spacing: 1px;
   margin-top: 50px;
 }
 h3 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
-  letter-spacing: 2px;
+  letter-spacing: 0.5px;
   margin-top: 50px;
 }
 h4 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
-  letter-spacing: 2px;
+  letter-spacing: 0.5px;
   margin-top: 50px;
 }
 h5 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
-  letter-spacing: 1px;
+  letter-spacing: 0.3px;
 }
 h6 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
-  letter-spacing: 1px;
+  letter-spacing: 0.2px;
 }
 li{
   margin-top: 10px;
@@ -496,7 +536,7 @@ text-decoration: underline;
 .toc .title {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 32px;
-  letter-spacing: 2.12px;
+  letter-spacing: 1.12px;
   margin-top: 20px;
   margin-left: -1px;
   line-height: 35px;
