--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -7,28 +7,26 @@
 		<title>{{$seotitle := .Params.seotitle}}{{ if isset .Params "seotitle" }}{{$seotitle}}{{else}}{{.Title}}{{ end }}{{ if .IsHome }} | Endüstriyel Tasarım Dergisi {{ .Site.Params.Tagline }}{{ else }} - {{ .Site.Title }}{{ end }}
 		</title>
 		<meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}"/>
-		<link rel="stylesheet" href="https://unpkg.com/bootstrap@4.1.1/dist/css/bootstrap.min.css">
+		<!-- <link rel="stylesheet" href="https://unpkg.com/bootstrap@4.1.1/dist/css/bootstrap.min.css"> -->
+		<link rel="stylesheet" href="{{.Site.BaseURL}}bootstrap/bootstrap.min.css" />
 		<link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.css" />
 		{{ with .Params.robotsdisallow }}
 		<meta name="robots" content="noindex, nofollow" />
 		{{ else }}<meta name="robots" content="index, follow" />{{ end }}
 		<!-- Favicon -->
-		<link rel="apple-touch-icon" sizes="57x57" href="/icon/apple-icon-57x57.png" />
-		<link rel="apple-touch-icon" sizes="60x60" href="/icon/apple-icon-60x60.png" />
-		<link rel="apple-touch-icon" sizes="72x72" href="/icon/apple-icon-72x72.png" />
-		<link rel="apple-touch-icon" sizes="76x76" href="/icon/apple-icon-76x76.png" />
-		<link rel="apple-touch-icon" sizes="114x114" href="/icon/apple-icon-114x114.png" />
-		<link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-icon-120x120.png" />
-		<link rel="apple-touch-icon" sizes="144x144" href="/icon/apple-icon-144x144.png" />
-		<link rel="apple-touch-icon" sizes="152x152" href="/icon/apple-icon-152x152.png" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-icon-180x180.png" />
-		<link rel="icon" type="image/png" sizes="192x192" href="/icon/android-icon-192x192.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="96x96" href="/icon/favicon-96x96.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png" />
-		<meta name="msapplication-TileColor" content="#ffffff" />
-		<meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png" />
-		<meta name="theme-color" content="#ffffff" />
+		<link rel="apple-touch-icon" sizes="57x57" href="{{.Site.BaseURL}}icon/apple-icon-57x57.png" />
+		<link rel="apple-touch-icon" sizes="60x60" href="{{.Site.BaseURL}}icon/apple-icon-60x60.png" />
+		<link rel="apple-touch-icon" sizes="72x72" href="{{.Site.BaseURL}}icon/apple-icon-72x72.png" />
+		<link rel="apple-touch-icon" sizes="76x76" href="{{.Site.BaseURL}}icon/apple-icon-76x76.png" />
+		<link rel="apple-touch-icon" sizes="114x114" href="{{.Site.BaseURL}}icon/apple-icon-114x114.png" />
+		<link rel="apple-touch-icon" sizes="120x120" href="{{.Site.BaseURL}}icon/apple-icon-120x120.png" />
+		<link rel="apple-touch-icon" sizes="144x144" href="{{.Site.BaseURL}}icon/apple-icon-144x144.png" />
+		<link rel="apple-touch-icon" sizes="152x152" href="{{.Site.BaseURL}}icon/apple-icon-152x152.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="{{.Site.BaseURL}}icon/apple-icon-180x180.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="{{.Site.BaseURL}}icon/android-icon-192x192.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="{{.Site.BaseURL}}icon/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="96x96" href="{{.Site.BaseURL}}icon/favicon-96x96.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="{{.Site.BaseURL}}icon/favicon-16x16.png" />
 		<link rel="canonical" href="{{ .Permalink }}" />
 		{{ if .IsHome }} {{else}}
 		<script src="https://unpkg.com/valine@1.4.14/dist/Valine.min.js" defer='defer'></script>
@@ -73,6 +71,17 @@
         </script>
     {{ end }}-->
 		<!--  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
+	
+		{{ if not (in (.Site.BaseURL | string) "localhost") }}
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+	   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122967892-3"></script>
+	   <script>
+		 window.dataLayer = window.dataLayer || [];
+		 function gtag(){dataLayer.push(arguments);}
+		 gtag('js', new Date());
+		 gtag('config', 'UA-122967892-3');
+	   </script>
+	   {{end}}
 	</head>
 	<body></body>
 </html>
