--- a/themes/Markut/layouts/partials/mailde.html
+++ b/themes/Markut/layouts/partials/mailde.html
@@ -1,3 +1,3 @@
 <div class="col-md-5 maildesvg ">
-   <img class="img-fluid" src="/img/markut-mailde-v3.svg" alt="Markut Mailde İllustrasyon">
+   <img loading="lazy" class="img-fluid" src="/img/markut-mailde-v3.svg" alt="Markut Mailde İllustrasyon">
 </div>
