--- a/themes/Markut/layouts/sayfa/single.html
+++ b/themes/Markut/layouts/sayfa/single.html
@@ -7,11 +7,14 @@
   <div id="contentsWrapper">
     <div class="content">
         <div class="gecis">
+          <div class="container">
           <span class="sayfa">{{ .Params.sayfa }}</span>
-          <div class="titya"><a href="{{ .Permalink }}"><h1 class="title">{{ .Params.title}}</h1></a>
-          <div class="desc">
-            {{ range $index, $element := .Params.yazar }}{{ with $.Site.GetPage "taxonomyTerm" (printf "yazar/%s" (urlize .)) }}{{ if gt $index 0 }}, {{ end }}<a href="{{ .Permalink }}">{{ .Title }}</a>{{ end }}{{ end }}
-          </div></div>
+             <div class="titya"><a href="{{ .Permalink }}"><h1 class="title">{{ .Params.title}}</h1></a>
+             <div class="desc">
+               {{ range $index, $element := .Params.yazar }}{{ with $.Site.GetPage "taxonomyTerm" (printf "yazar/%s" (urlize .)) }}{{ if gt $index 0 }}, {{ end }}<a href="{{ .Permalink }}">{{ .Title }}</a>{{ end }}{{ end }}
+             </div>
+            </div>
+         </div>
         </div>
         {{ $number := (float .Params.sayfa) }}
         {{ $anothernumber := 1 }}
