--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -38,18 +38,6 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-
-/*
-@media screen and (min-width: 768px) {
-  html {
-    scroll-snap-type: proximity;
-    scroll-snap-points-y: repeat(50px);
-    scroll-snap-type: y proximity;
-    scroll-padding: 60px;
-  }
-}
-*/
-
 div {
   font-family: Segoe UI,system-ui,-apple-system,sans-serif;
 }
@@ -73,7 +61,7 @@ h1 {
 h2 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
-  letter-spacing: 1px;
+  letter-spacing: 0.7px;
   margin-top: 50px;
 }
 h3 {
@@ -318,8 +306,8 @@ color: white;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
   font-size: 36px;
-  color: #afafaf;
-  letter-spacing: 7px;
+  color: #686868;
+  letter-spacing: 3px;
   margin-top: -12px;
 }
 .sayilar li {
@@ -338,8 +326,8 @@ color: white;
   color: #ffffff;
   margin-top: 20px;
   margin-bottom: -25px;
-  text-shadow: -1px -1px 0 #afafaf, 1px -1px 0 #afafaf, -1px 1px 0 #afafaf,
-    1px 1px 0 #afafaf;
+  text-shadow: -1px -1px 0 #686868, 1px -1px 0 #686868, -1px 1px 0 #686868,
+    1px 1px 0 #686868;
 }
 .contents {
   font-family: 'Roboto Condensed', sans-serif;
@@ -350,7 +338,9 @@ color: white;
   padding-left: 0px;
   padding-top: 2px;
 }
-
+.contents a strong span{
+  color: #686868;
+}
 .markutbtn {
   border-radius: 30px;
   border-style: solid;
@@ -428,7 +418,7 @@ footer a:hover {
   margin-left: -5px;
 }
 .footerdesc {
-  color: #696969;
+  color: #686868;
   font-size: 16px;
   max-width: 800px;
   margin: 0 auto;
@@ -464,7 +454,7 @@ text-decoration: underline;
 }
 .copyright {
   text-align: center;
-  color: #696969;
+  color: #686868;
   padding: 20px;
 }
 
@@ -540,7 +530,7 @@ text-decoration: underline;
   margin-top: 20px;
   margin-left: -1px;
   line-height: 35px;
-  margin-bottom: -10px;
+  margin-bottom: -5px;
   color: #000;
   text-decoration-color: #f3c420;
 }
@@ -551,26 +541,27 @@ text-decoration: underline;
 
 .toc .yazar {
   font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 700;
   font-size: 12px;
   letter-spacing: 2.12px;
-  color: #696969;
+  color: #686868;
   margin-left: 1px;
 }
 .toc .desc {
   font-size: 14px;
   letter-spacing: 1px;
   margin-top: 10px;
-  color: #696969;
+  color: #686868;
 }
 
 .onde .title {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 32px;
-  letter-spacing: 2.12px;
-  margin-top: 20px;
+  letter-spacing: 1.12px;
+  margin-top: 10px;
   margin-left: -1px;
   line-height: 35px;
-  margin-bottom: -10px;
+  margin-bottom: 0px;
   color: #000;
   text-decoration-color: #f3c420;
 }
@@ -581,58 +572,60 @@ text-decoration: underline;
 
 .onde .yazar {
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 12px;
+  font-weight: 700;
+  font-size: 14px;
   letter-spacing: 2.12px;
-  color: #696969;
+  color: #686868;
   margin-left: 1px;
 }
 .onde .desc {
   font-size: 14px;
   letter-spacing: 1px;
   margin-top: 10px;
-  color: #696969;
+  color: #686868;
 }
 .gecis {
   border-bottom: 1px solid #afafaf;
   border-top: 1px solid #afafaf;
   width: 100%;
   height: 70px;
-  margin-top: 53px;
+  margin-top: 55px;
   clear: both;
   display: table;
 }
 .gecis .sayfa {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 64px;
-  color: #ffffff;
+  color: #f8f8f8;
   float: left;
   line-height: 0px;
   margin-top: 36px;
-  margin-left: 50px;
-  text-shadow: -2px -2px 0 #000000, 1px -1px 0 #afafaf, -1px 1px 0 #afafaf,
-    1px 1px 0 #afafaf;
+  text-shadow: -1px -1px 3px #2b2b2b, 1px -1px 0 #2b2b2b, -1px 1px 0 #2b2b2b,
+    1px 1px 0 #2b2b2b;
 }
 
 .gecis .title {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 42px;
-  letter-spacing: 2px;
+  letter-spacing: 1.2px;
   margin-top: 5px;
   margin-bottom: 0px;
   color: #1d1d1d;
-  scroll-snap-align: start;
 }
 .gecis .desc {
-  font-size: 14px;
+  font-size: 16px;
   letter-spacing: 1px;
   margin-top: 0px;
   color: #afafaf;
 }
 .gecis .titya {
-  padding-left: 150px;
+  padding-left: 90px;
 }
 .titya a {
+  font-weight: 700;
+  color: #686868;
   text-decoration-color: #f3c420;
+text-decoration-thickness: 4px;
 }
 .markutcontent {
   max-width: 800px;
@@ -859,8 +852,8 @@ svg{
 }
 [data-theme='dark'] .gecis .sayfa {
   color: #1b1b1b;
-  text-shadow: -2px -2px 0 #fdfffa, 1px -1px 0 #afafaf, -1px 1px 0 #afafaf,
-    1px 1px 0 #afafaf;
+  text-shadow:-1px -1px 3px #afafaf, 1px -1px 0 #afafaf, -1px 1px 0 #afafaf,
+  1px 1px 0 #afafaf;
 }
 
 [data-theme='dark'] .gecis .title {
@@ -933,11 +926,8 @@ svg{
     line-break: 5px;
     margin-top: 7px;
   }
-  .gecis .sayfa {
-    margin-left: 30px;
-  }
   .gecis .titya {
-    padding-left: 120px;
+    padding-left: 80px;
   }
   .markutcvr {
     float: unset;
@@ -978,7 +968,6 @@ svg{
     margin-top: 7px;
   }
   .gecis .sayfa {
-    margin-left: 5px;
     font-size: 46px;
     text-shadow: -2px -2px 0 #000000, 1px -1px 0 #afafaf, -1px 1px 0 #afafaf,
       1px 1px 0 #afafaf;
