--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -11,7 +11,7 @@
       </div>
       <div class="modal-body">
           <div class="mailde">
-                  <div class="col-md-8 m-auto"><img loading="lazy" class="img-fluid" src="/img/markut-mailde-v3.svg" alt="Markut Mailde İllustrasyon"></div>
+                  <div class="col-md-8 m-auto"><img loading="lazy" class="img-fluid" src="{{.Site.BaseURL}}/img/markut-mailde-v3.svg" alt="Markut Mailde İllustrasyon"></div>
                   <div class="mailde-title">Dergimize Abone Olun</div>
                   <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
                   <p class="emailoctopus-success-message">
