--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -14,19 +14,13 @@
 		<meta name="robots" content="noindex, nofollow" />
 		{{ else }}<meta name="robots" content="index, follow" />{{ end }}
 		<!-- Favicon -->
-		<link rel="apple-touch-icon" sizes="57x57" href="{{.Site.BaseURL}}icon/apple-icon-57x57.png" />
-		<link rel="apple-touch-icon" sizes="60x60" href="{{.Site.BaseURL}}icon/apple-icon-60x60.png" />
-		<link rel="apple-touch-icon" sizes="72x72" href="{{.Site.BaseURL}}icon/apple-icon-72x72.png" />
-		<link rel="apple-touch-icon" sizes="76x76" href="{{.Site.BaseURL}}icon/apple-icon-76x76.png" />
-		<link rel="apple-touch-icon" sizes="114x114" href="{{.Site.BaseURL}}icon/apple-icon-114x114.png" />
-		<link rel="apple-touch-icon" sizes="120x120" href="{{.Site.BaseURL}}icon/apple-icon-120x120.png" />
-		<link rel="apple-touch-icon" sizes="144x144" href="{{.Site.BaseURL}}icon/apple-icon-144x144.png" />
-		<link rel="apple-touch-icon" sizes="152x152" href="{{.Site.BaseURL}}icon/apple-icon-152x152.png" />
-		<link rel="apple-touch-icon" sizes="180x180" href="{{.Site.BaseURL}}icon/apple-icon-180x180.png" />
-		<link rel="icon" type="image/png" sizes="192x192" href="{{.Site.BaseURL}}icon/android-icon-192x192.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="{{.Site.BaseURL}}icon/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="96x96" href="{{.Site.BaseURL}}icon/favicon-96x96.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="{{.Site.BaseURL}}icon/favicon-16x16.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="{{.Site.BaseURL}}icon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="{{.Site.BaseURL}}icon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="{{.Site.BaseURL}}icon/favicon-16x16.png">
+		<link rel="manifest" href="{{.Site.BaseURL}}icon/site.webmanifest">
+		<link rel="mask-icon" href="{{.Site.BaseURL}}icon/safari-pinned-tab.svg" color="#000000">
+		<meta name="msapplication-TileColor" content="#603cba">
+		<meta name="theme-color" content="#ffffff">
 		<link rel="canonical" href="{{ .Permalink }}" />
 		{{ if .IsHome }} {{else}}
 		<script src="https://unpkg.com/valine@1.4.14/dist/Valine.min.js" defer='defer'></script>
