illustrasyonlar ve küçük yazım hataları

--- a/themes/Markut/layouts/blog/single.html
+++ b/themes/Markut/layouts/blog/single.html
@@ -7,9 +7,14 @@
                 <a href="/blog/">/blog</a>
                 <h1 class="title">{{.Title}}</h1>
                 <p class="yazar mb-5">{{- range $index, $element := .Params.yazar }}{{- with $.Site.GetPage "taxonomyTerm" (printf "yazar/%s" (urlize .)) }}{{ if gt $index 0 }}, {{ end }}<a href="{{ .Permalink }}">{{ .Params.title }}</a>{{ end }}{{ end }} | <time>{{.Date.Day}} {{ index $.Site.Data.months_data.months .Date.Month }} {{ .Date.Year }}</time></p>
-                <div class="markutpage">
+                 </div>
+                 {{if isset .Params "full"}}
                     {{.Content}}
-                </div></div>
+                {{else}}
+                <div class="offset-md-2 col-md-8 mt-3 blog markutpage">
+                    {{.Content}}
+                </div>
+                {{end}}
             <div class="col-md-4"></div>
         </div>
     </div>
