--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -1,9 +1,7 @@
 {{ partial "head.html" . }}
 {{ partial "header.html" . }}
-
-
 <div class="text-center mt-6">
-        <a href="{{.Site.BaseURL}}reklam-sponsorluk/">
+        <a href="{{.Site.BaseURL}}reklam-sponsorluk/" target="_blank" rel="noopener noreferrer">
         <picture>
                  <source media='(min-width: 401px)'
                  srcset='{{$.Site.Params.areklampc}}'/>
@@ -37,7 +35,7 @@
 
 <!-- B Reklam Sponsor -->
 <div class="text-center mt-3 mb-5">
-        <a href="{{.Site.BaseURL}}reklam-sponsorluk/">
+        <a href="{{.Site.BaseURL}}reklam-sponsorluk/" target="_blank" rel="noopener noreferrer">
         <picture>
                  <source media='(min-width: 401px)'
                  srcset='{{$.Site.Params.breklampc}}'/>
