--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -128,6 +128,7 @@
             <li class="list-inline-item"><a href="{{.Site.BaseURL}}okuyucu-sozlesmesi/">Okuyucu Sözleşmesi</a></li>| 
             <li class="list-inline-item"><a href="{{.Site.BaseURL}}yazar/">Yazarlar</a></li>| 
             <li class="list-inline-item"><a href="{{.Site.BaseURL}}tags/">Etiketler</a></li>| 
+            <li class="list-inline-item"><a href="{{.Site.BaseURL}}illustrasyon/">İllustrasyonlar</a></li>| 
             <li class="list-inline-item"><div class="custom-control custom-switch m-0 ml-0 pl-2 mdarkmode">
               <input type="checkbox" class="custom-control-input " id="darkSwitch" />
               <label for="darkSwitch">Karanlık Mod</label>
