--- a/content/dergi/sayi-8/component/index.html
+++ b/content/dergi/sayi-8/component/index.html
@@ -185,24 +185,29 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
    </div></div>
 </div>
 
-
-   <p>
+<div class="row mt-md-5">
+   <div class="col-md-6">   <p>
       Kullanımına baktığımızda: bir ana öge belirleyip kopyaladıktan sonra ana
       ögedeki herhangi bir değişiklik diğer tasarımlara da yansıyacaktır.
       Kopyalanan ögelerde, ana ögeden bağımsız olarak değişiklik yapabilirsiniz.
       Componentleri kullanmak tasarımdaki bir değişikliği (renk, margin
       -çerçevedeki dış boşluk-, radyus) otomatik yansıtması çalışmada hızlanmayı
       sağlayacaktır.
-   </p>
-   <p>
+   </p></div>
+   <div class="col-md-6">   <p>
       <img
          src="https://www.markut.net/sayi-8/component-nedir/adobe-xd-components.gif"
          referrerpolicy="no-referrer"
          alt="Adobe XD ile component kullanımı"
       />
-   </p>
+   </p></div>
+</div>
+
+
    <h3>Yazılımda Component:</h3>
-   <p>
+
+   <div class="row">
+   <div class="col-md-6">     <p>
       Web arayüz kodlanmasında baktığımızda en popülerlerinden biri de
       Bootstrap&#39;tir. Amerikayı yeniden keşfetmeye gerek yok diyerek ortaya
       çıkan Bootstrap hazır grid (ızgara sistemi), buton yapıları, kart
@@ -210,18 +215,20 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
       demek mümkündür. Bu parçalar, arayüz tasarımına göre tekrar şekillendirir.
       Bu olay, aynı strüktür (yapı) kodlarının tekrar tekrar yazılmasını ortadan
       kaldırarak zaman kazandırır.
-   </p>
-   <p>
+   </p> 
+</div>
+   <div class="col-md-6">  <p>
       Yazılımda component mantığı ile tasarımı koda aktarmak için Tayfun
-      Erbilen&#39;in dersini izleyebilirsiniz.
-   </p>
-   <div class="embed-responsive embed-responsive-16by9">
+      Erbilen&#39;in dersini izleyebilirsiniz:
+   </p> <div class="embed-responsive embed-responsive-16by9">
       <iframe
          class="embed-responsive-item"
          src="https://www.youtube.com/embed/NR7u6Z1wzP0"
          allowfullscreen
       ></iframe>
-   </div>
+   </div></div>
+</div>
+
 
    <hr />
    <h2>Mantığı ve Son Sözler</h2>
